changed slide videos to 7seconds intervals

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
             <div class="carousel-container">
                     <div class="carousel-slide">
                         <video autoplay loop muted playsinline>
-                            <source src="images/Untitled video - Made with Clipchamp.mp4" type="video/mp4">
+                            <source src="images/(24) Fatai William - SCRIPT FROM AGO (Official Music Video) - YouTube - Google Chrome 2024-08-24 17-35-06.mov" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                         <button class="action-btn"><a href="music.html">All Music</a> </button>
                     </div>
                 <div class="carousel-slide">
                     <video autoplay loop muted playsinline>
-                        <source src="images/latestvid.mp4" type="video/mp4">
+                        <source src="images/(24) Fatai William - 30 Days & 30 Nights (Official Music Video) - YouTube - Google Chrome 2024-08-24 17-36-50.mov" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                         <button class="action-btn"><a href="https://youtu.be/TqZQOqqexv0?si=0z_fxgLKIptgtbCY">Latest Hit</a></button>
                 </div>
                 <div class="carousel-slide">
                     <video autoplay loop muted playsinline>
-                        <source src="images/Untitled video - Made with Clipchamp (2).mp4" type="video/mp4">
+                        <source src="images/(24) Fatai William - JAPATA (Official Music Video) - YouTube - Google Chrome 2024-08-24 17-20-45.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                         <button class="action-btn"><a href="https://youtu.be/DX9G54GTHCI?si=cDpNFeTnRbxmRZPm">People's Choice</a> </button> <!-- Example action button -->
