changed gallery display to flex, added a text section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
                     <h3>Fatai William</h3>
                 </a>
             </div>
+            <div class="gallery-text">
+                <H2>Explore Our Talent</H2>
+                <button class="shop-btn">Explore Talent</button>
+            </div>
             <!--<div class="gallery-item">
                 <a href="artist-profile-link2.html">
                     <img src="images/pexels-marcela-alessandra-789314-1885213.jpg" alt="Artist 2">
