--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 <div class="carousel-slide">
                     <video autoplay loop muted playsinline>
-                        <source src="images/30days30nights.mp4" type="video/mp4">
+                        <source src="images/FataiWillliam -30 days.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                         <button class="action-btn"><a href="https://youtu.be/TqZQOqqexv0?si=0z_fxgLKIptgtbCY">Latest Hit</a></button>
