--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 <div class="carousel-slide">
                     <video autoplay loop muted playsinline>
-                        <source src="images/FataiWillliam -30 days.mp4" type="video/mp4">
+                        <source src="images/Untitled video - Made with Clipchamp (5).mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                         <button class="action-btn"><a href="https://youtu.be/TqZQOqqexv0?si=0z_fxgLKIptgtbCY">Latest Hit</a></button>
@@ -76,6 +76,7 @@
         </div>
     </div>
 </section>
+<hr>
 
 <section id="merch-preview" class="merch-preview">
     <div class="glitch-con">
