added horizontal rule to sections

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         </div>
     </div>
 </section>
+<hr>
 
 <section id="gallery">
     <div class="glitch-con">
@@ -112,7 +113,7 @@
             </div>
             <div class="gallery-text">
                 <H2>Explore Our Talent</H2>
-                <button class="shop-btn">Explore Talent</button>
+                <a href="https://linktr.ee/fataiwilliam"><button class="shop-btn">Explore Talent</button></a>
             </div>
             <!--<div class="gallery-item">
                 <a href="artist-profile-link2.html">
@@ -135,6 +136,7 @@
         </div>
     </div>
 </section>
+<hr>
 
 
     <!--<section >
