added merch images and changed music sample bacground color

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
         <div class="merch-text">
             <h2> Explore Our Collection</h2>
             <p>Dive into the world of unique and stylish merchandise. From custom apparel to limited edition accessories, our store offers something for everyone</p>
+            
+        </div>
+        <div class="merch-samples">
+            <div class="merchsamples-container">
+                <img src="images/Screenshot (1204).png" alt="">
+                <img src="images/Screenshot (1205).png" alt="">
+                <img src="images/Screenshot (1206).png" alt="">
+            </div>
             <a href="https://8figuremerch.myshopify.com/"><button class="shop-btn">Shop Now</button></a>
             </a>
         </div>
