changed 2nd merch image

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="merch-samples">
             <div class="merchsamples-container">
                 <img src="images/Screenshot (1204).png" alt="">
-                <img src="images/Screenshot (1205).png" alt="">
+                <img src="images/merch1.jpeg" alt="">
                 <img src="images/Screenshot (1206).png" alt="">
             </div>
             <a href="https://8figuremerch.myshopify.com/"><button class="shop-btn">Shop Now</button></a>
