--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
     </div>
 </section>
 <hr>
-
 <section id="merch-preview" class="merch-preview">
     <div class="glitch-con">
         <div class="glitch" data-text="Merch">
@@ -96,7 +95,7 @@
         <div class="merch-samples">
             <div class="merchsamples-container">
                 <img src="images/Screenshot (1204).png" alt="">
-                <img src="images/merch1.jpeg" alt="">
+                <img src="images//merch-cover2.jpg" alt="">
                 <img src="images/Screenshot (1206).png" alt="">
             </div>
             <a href="https://8figuremerch.myshopify.com/"><button class="shop-btn">Shop Now</button></a>
