--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
             <a href="https://ampl.ink/NG8BB" target="_blank">
                 <img src="images/Japata-cover.png" alt="Cover 1">
             </a>
-            <a href="https://ampl.ink/NG8BB" target="_blank">LISTEN NOW</a>
+            <a href="music.html" target="_blank">LISTEN NOW</a>
+            <!--<a href="https://ampl.ink/NG8BB" target="_blank">LISTEN NOW</a>-->
         </div>
         <div class="merch-text">
             <h2>Feel The Rhythm</h2>
             <p>Welcome to 8Figure Music! As a dynamic brand and record label, 8Figure champions talented artists and their unique sounds. Dive into our curated tracks and albums to experience the passion and creativity that define 8Figure. </p>
-            <a href="https://linktr.ee/fataiwilliam"><button class="shop-btn">All Music</button></a>
+            <a href="https://linktr.ee/fataiwilliam"><button class="shop-btn">Explore Music</button></a>
         </div>
     </div>
 </section>
@@ -90,17 +91,16 @@
         <div class="merch-text">
             <h2> Explore Our Collection</h2>
             <p>Dive into the world of unique and stylish merchandise. From custom apparel to limited edition accessories, our store offers something for everyone</p>
-            
+            <a href="https://8figuremerch.myshopify.com/"><button class="shop-btn">Shop Now</button></a>
+        </a>
         </div>
-        <div class="merch-samples">
+        <!--<div class="merch-samples">
             <div class="merchsamples-container">
                 <img src="images/Screenshot (1204).png" alt="">
                 <img src="images//merch-cover2.jpg" alt="">
                 <img src="images/Screenshot (1206).png" alt="">
             </div>
-            <a href="https://8figuremerch.myshopify.com/"><button class="shop-btn">Shop Now</button></a>
-            </a>
-        </div>
+        </div>-->
     </div>
 </section>
 <hr>
