cleaned up main section

--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
             <a href="music.html" target="_blank">LISTEN NOW</a>
             <!--<a href="https://ampl.ink/NG8BB" target="_blank">LISTEN NOW</a>-->
         </div>
-        <div class="merch-text">
+        <div class="music-text2">
             <h2>Feel The Rhythm</h2>
             <p>Welcome to 8Figure Music! As a dynamic brand and record label, 8Figure champions talented artists and their unique sounds. Dive into our curated tracks and albums to experience the passion and creativity that define 8Figure. </p>
-            <a href="https://linktr.ee/fataiwilliam"><button class="shop-btn">Explore Music</button></a>
+            <a href="https://linktr.ee/fataiwilliam"><button class="shop-btn">Explore</button></a>
         </div>
     </div>
 </section>
-<hr>
 <section id="merch-preview" class="merch-preview">
     <div class="glitch-con">
         <div class="glitch" data-text="Merch">
@@ -103,7 +102,6 @@
         </div>-->
     </div>
 </section>
-<hr>
 
 <section id="gallery">
     <div class="glitch-con">
