added link to All Music

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="music-text2">
             <h2>Feel The Rhythm</h2>
             <p>Welcome to 8Figure Official by Fatai William! As a dynamic brand and record label, 8Figure champions talented artists and their unique sounds. Dive into our curated tracks and albums to experience the passion and creativity that define 8Figure. </p>
-            <a href="https://linktr.ee/fataiwilliam"><button class="shop-btn">Explore Music</button></a>
+            <a href="music.html"><button class="shop-btn">Explore Music</button></a>
         </div>
     </div>
 </section>
