--- a/music.html
+++ b/music.html
@@ -35,7 +35,7 @@
         </section>
 
 
-        < id="music-main1" class="music-main1">
+        <section id="music-main1" class="music-main1">
     
                     <h2>Top Songs</h2>
             
@@ -72,7 +72,7 @@
             </div>
             <br>
             <br>
-            <button class="shop-btn">All Music</button>
+            <a href="https://linktr.ee/fataiwilliam"><button class="shop-btn">All Music</button></a>
             <br>
             <br>
         </section>
