--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="music-text2">
             <h2>Feel The Rhythm</h2>
-            <p>Welcome to 8Figure Official by Fatai William! As a dynamic brand and record label, 8Figure champions talented artists and their unique sounds. Dive into our curated tracks and albums to experience the passion and creativity that define 8Figure. </p>
+            <p>Welcome to 8Figure Official by Fataiwilliam! As a dynamic brand and record label, 8Figure champions talented artists and their unique sounds. Dive into our curated tracks and albums to experience the passion and creativity that define 8Figure. </p>
             <a href="music.html"><button class="shop-btn">Explore Music</button></a>
         </div>
     </div>
@@ -89,8 +89,7 @@
         </div>
         <div class="merch-text">
             <h2> Explore Our Collection</h2>
-            <p>8Figure Merchandise offers exclusive products inspired by AfroBeats artist Fatai William, blending style with music culture. Explore our unique collections and shop the latest in fashion and music accessories.
-            </p>
+            <p>Dive into the world of unique and stylish merchandise. From custom apparel to limited edition accessories, our store offers something for everyone</p>
             <a href="https://8figuremerch.myshopify.com/"><button class="shop-btn">Shop Now</button></a>
         </a>
         </div>
