added contact section to music page

--- a/music.html
+++ b/music.html
@@ -168,6 +168,36 @@
     </div>
 </section>
 
+<section id="contact">
+    <div class="contact-container">
+        <h2 class="contact-title">Contact Us</h2>
+        <div class="contact-content">
+            <div class="contact-details">
+                <p>We would love to hear from you! Whether you have a question about bookings and collaborations, getting discovered , or anything else, our team is ready to answer all your questions.</p>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i> 8Figure llc., Denver, CO</li>
+                    <li><i class="fas fa-phone-alt"></i> (720) 347-3378</li>
+                    <li><i class="fas fa-envelope"></i> Fataiwale21@gmail.com</li>
+                </ul>
+            </div>
+            <form class="contact-form">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="contact-btn">Send Message</button>
+            </form>
+        </div>
+    </div>
+</section>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         var divs = document.querySelectorAll(".youtube-player");
